# pyrlkit

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pyrlkit-dev-1.rockspec  requirements.txt  testing.py  testing_maze.py
.github/workflows/: pytest.yml  python-app.yml
pyrlkit/: __init__.py
pyrlkit/agents/: __init__.py  snake_agent.py  snake_agent_smarter.py
pyrlkit/environments/: __init__.py  maze.py  snake.py
pyrlkit/exceptions/: __init__.py  exceptions.py
pyrlkit/models/: __init__.py  enhanced_nn.py  q_linear.py
pyrlkit/scripts/: plot.py
src/environments/: environments-dev-1.rockspec  main.lua
tests/: __init__.py  test_get_action.py  test_get_state.py  test_remember.py  test_train.py  test_train_short_term_memory.py
